--- a/AppFinanceiro/Views/Transaction/TransactionAdd.xaml
+++ b/AppFinanceiro/Views/Transaction/TransactionAdd.xaml
@@ -3,30 +3,69 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppFinanceiro.Views.Transaction.TransactionAdd"
              Title="TransactionAdd">
-    <VerticalStackLayout Spacing="30">
-        <Border BackgroundColor="Black" Stroke="Transparent" Margin="15" Padding="15" StrokeShape="RoundRectangle 30">
-            <Grid Margin="30,0" RowDefinitions="Auto" ColumnDefinitions="*,30">
-                <Label 
-            Text="Novo"
-            HorizontalOptions="Center" 
-            Grid.Row="0"
-            Grid.Column="0"
-            TextColor="White"/>
-                <Label Text="X" 
-               HorizontalOptions="Center" 
-               Grid.Row="0"
-               Grid.Column="1"
-               TextColor="AliceBlue"/>
+    <VerticalStackLayout Spacing="10">
+        <Border
+            Margin="15"
+            Padding="15"
+            BackgroundColor="Black"
+            Stroke="Transparent"
+            StrokeShape="RoundRectangle 30">
+            <Grid ColumnDefinitions="*, 30" RowDefinitions="Auto">
+                <Label
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    HorizontalOptions="Center"
+                    Text="Novo"
+                    TextColor="White"
+                    VerticalOptions="Center" />
+                <Image
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    HorizontalOptions="Center"
+                    Source="close.png"
+                    WidthRequest="17">
+                    <Image.GestureRecognizers>
+                         
+                    </Image.GestureRecognizers>
+                </Image>
             </Grid>
         </Border>
 
-        <Entry Placeholder="Nome" Margin="15,0"></Entry>
+        <Label
+            x:Name="LabelError"
+            Margin="30,0"
+            IsVisible="False"
+            TextColor="{AppThemeBinding Light=Red,
+                                        Dark='#F37474'}" />
+        <Grid Margin="30,0" ColumnDefinitions="*,*">
+            <RadioButton
+                x:Name="RadioIncome"
+                Content=" Receita"
+                IsChecked="True" />
+            <RadioButton
+                x:Name="RadioExpense"
+                Grid.Column="1"
+                Content=" Despesa"
+                HorizontalOptions="End" />
+        </Grid>
 
-        <DatePicker Margin="15,0"></DatePicker>
+        <Entry
+            x:Name="EntryName"
+            Margin="15,0"
+            Placeholder="Nome" />
 
-        <Entry Placeholder="Valor" Margin="15,0"></Entry>
+        <DatePicker x:Name="DatePickerDate" Margin="{OnPlatform Default='15,0', MacCatalyst='15, 15, 15, 0'}" />
 
-        <Button Text="Salvar" Margin="15,0" HorizontalOptions="Center" />
+        <Entry
+            x:Name="EntryValue"
+            Margin="15,0"
+            Placeholder="Valor" />
+
+        <Button
+            Clicked="OnButtonClicked_Save"
+            Margin="15,0"            
+            HorizontalOptions="Center"
+            Text="Salvar" />
 
     </VerticalStackLayout>
 
