ajuste de estrutura de projeto

--- a/AppFinanceiro/Views/Transaction/TransactionList.xaml
+++ b/AppFinanceiro/Views/Transaction/TransactionList.xaml
@@ -15,39 +15,39 @@
             <converters:TransactionCircleFirstLetterColorConverter x:Key="TransactionCircleFirstLetterColorConverter"></converters:TransactionCircleFirstLetterColorConverter>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <VerticalStackLayout>
-        <CollectionView x:Name="CollectionViewTransactions">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Grid  Padding="15" ColumnDefinitions="50,*,Auto">
-                        <Grid.GestureRecognizers>
-                            <TapGestureRecognizer CommandParameter="{Binding }" Tapped="TapGestureRecognizer_Tapped_To_TransactionEdit">
-                            </TapGestureRecognizer>
-                        </Grid.GestureRecognizers>
-                        <Border BackgroundColor="{Binding Name , Converter={StaticResource TransactionCircleFirstLetterColorConverter}}" WidthRequest="40" HeightRequest="40" StrokeShape="RoundRectangle 20" >
-                            <Border.GestureRecognizers>
-                                <TapGestureRecognizer  CommandParameter="{Binding }" Tapped="TapGestureRecognizer_Tapped"></TapGestureRecognizer>
-                            </Border.GestureRecognizers>
-                            <Label HorizontalOptions="Center" 
+
+    <CollectionView x:Name="CollectionViewTransactions">
+        <CollectionView.ItemTemplate>
+            <DataTemplate>
+                <Grid  Padding="15" ColumnDefinitions="50,*,Auto">
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer CommandParameter="{Binding }" Tapped="TapGestureRecognizer_Tapped_To_TransactionEdit">
+                        </TapGestureRecognizer>
+                    </Grid.GestureRecognizers>
+                    <Border BackgroundColor="{Binding Name , Converter={StaticResource TransactionCircleFirstLetterColorConverter}}" WidthRequest="40" HeightRequest="40" StrokeShape="RoundRectangle 20" >
+                        <Border.GestureRecognizers>
+                            <TapGestureRecognizer  CommandParameter="{Binding }" Tapped="TapGestureRecognizer_Tapped"></TapGestureRecognizer>
+                        </Border.GestureRecognizers>
+                        <Label HorizontalOptions="Center" 
                                    VerticalOptions="Center" 
                                    Text="{Binding ., Converter={StaticResource TransactionFirstLetterConverter}}"></Label>
-                        </Border>
-                        <VerticalStackLayout Grid.Column="1">
-                            <Label Text="{Binding Name}" />
-                            <Label Text="{Binding Date,StringFormat='{0:dd/MM/yyyy}'}"></Label>
-                        </VerticalStackLayout>
-                        <Label Grid.Column="2" Text="{Binding ., Converter={StaticResource TransactionValueConverter}}" TextColor="{Binding ., Converter={StaticResource TransactionColorConverter}}"></Label>
+                    </Border>
+                    <VerticalStackLayout Grid.Column="1">
+                        <Label Text="{Binding Name}" />
+                        <Label Text="{Binding Date,StringFormat='{0:dd/MM/yyyy}'}"></Label>
+                    </VerticalStackLayout>
+                    <Label Grid.Column="2" Text="{Binding ., Converter={StaticResource TransactionValueConverter}}" TextColor="{Binding ., Converter={StaticResource TransactionColorConverter}}"></Label>
 
-                    </Grid>
+                </Grid>
 
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+            </DataTemplate>
+        </CollectionView.ItemTemplate>
+    </CollectionView>
 
-        <!--<Button Text="Adicionar" Clicked="OnButtonClicked_To_TransactionAdd" HorizontalOptions="Center"></Button>
+    <!--<Button Text="Adicionar" Clicked="OnButtonClicked_To_TransactionAdd" HorizontalOptions="Center"></Button>
         <Button Text="Editar" Clicked="OnButtonClicked_To_TransactionEdit" HorizontalOptions="Center"></Button>-->
-
-        <Border Margin="10" Padding="15" BackgroundColor="{StaticResource Black}" StrokeThickness="0" StrokeShape="RoundRectangle 40">
+    <AbsoluteLayout>
+        <Border  Margin="10" Padding="15" BackgroundColor="{StaticResource Black}" StrokeThickness="0" StrokeShape="RoundRectangle 40">
             <Grid ColumnDefinitions="*,80" RowDefinitions="Auto,Auto,30,Auto,Auto">
                 <Label Text="Saldo" FontSize="18" TextColor="#979797"></Label>
                 <Label x:Name="ValueBalance" Text="R$ 2.769,00" FontSize="36" TextColor="White" Grid.Row="1"></Label>
@@ -70,5 +70,5 @@
                 <Label x:Name="ValueExpense" TextColor="White" Grid.Row="4" Grid.Column="1"></Label>
             </Grid>
         </Border>
-    </VerticalStackLayout>
+    </AbsoluteLayout>
 </ContentPage>
